--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -11,7 +11,11 @@ max_input_vars = 100000
 default_charset = UTF-8
 
 [Date]
-date.timezone = ${TZ}
+upload_max_filesize = "20M"
+post_max_size = "20M"
+memory_limit = "512M"
+log_errors = On
+max_execution_time=30
 
 [mbstring]
 mbstring.language = Japanese
@@ -19,7 +23,6 @@ mbstring.language = Japanese
 [xdebug]
 xdebug.remote_enable = 1
 xdebug.remote_autostart = 1
-xdebug.remote_host = 172.255.0.2
-xdebug.remote_port = 9001
+xdebug.remote_host = docker.host.internal
+xdebug.remote_port = 9000
 xdebug.remote_log = /tmp/xdebug.log
-xdebug.remote_connect_back = 0
