--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -5,24 +5,24 @@ log_errors = on
 error_log = /var/log/php/php-error.log
 upload_max_filesize = -1
 memory_limit = -1
-post_max_size = 100M
-max_execution_time = 900
-max_input_vars = 100000
-default_charset = UTF-8
+post_max_size=100M
+max_execution_time=900
+max_input_vars=100000
+default_charset=UTF-8
 
 [Date]
-upload_max_filesize = "20M"
-post_max_size = "20M"
-memory_limit = "512M"
-log_errors = On
+upload_max_filesize="20M"
+post_max_size="20M"
+memory_limit="512M"
+log_errors=On
 max_execution_time=30
 
 [mbstring]
-mbstring.language = Japanese
+mbstring.language=Japanese
 
 [xdebug]
-xdebug.remote_enable = 1
-xdebug.remote_autostart = 1
-xdebug.remote_host = docker.host.internal
-xdebug.remote_port = 9000
-xdebug.remote_log = /tmp/xdebug.log
+xdebug.remote_enable=1
+xdebug.remote_autostart=1
+xdebug.remote_host=172.255.0.2
+xdebug.remote_port=9000
+xdebug.remote_log=/tmp/xdebug.log
